deploy/compose/envoy.yaml
static_resources:
  listeners:
  - name: main
    address: {socket_address: {address: 0.0.0.0, port_value: 10000}}
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress
          route_config:
            name: local
            virtual_hosts:
            - name: all
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                route: {cluster: echo}
          http_filters:
          - name: envoy.filters.http.ext_proc
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
              failure_mode_allow: true
              message_timeout: 0.5s
              processing_mode:
                request_header_mode: SEND
                response_header_mode: SKIP
              request_attributes: [source.address]
              grpc_service:
                envoy_grpc: {cluster_name: geoip}
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: geoip
    type: STRICT_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config: {http2_protocol_options: {}}
    load_assignment:
      cluster_name: geoip
      endpoints:
      - lb_endpoints:
        - endpoint: {address: {socket_address: {address: geoip, port_value: 9000}}}
  - name: echo
    type: STRICT_DNS
    load_assignment:
      cluster_name: echo
      endpoints:
      - lb_endpoints:
        - endpoint: {address: {socket_address: {address: echo, port_value: 8080}}}
